--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npx tailwindcss -o build.css --minify",
+    "build": "next build",
     "lint": "next lint"
   },
   "dependencies": {
