--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.5.4",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
